# DealsFindingAgent

./: demo.env  main.py  pricer_service.py  pyproject.toml  testmodal.ipynb
References/: day2.ipynb  day3.ipynb  day4.ipynb
agents/: frontier_agent.py  messaging_agent.py  scanner_agent.py
